clusters/apps/arr/gluetun/gluetun-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: gluetun
  name: gluetun
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gluetun
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: gluetun
    spec:
      containers:
        - env:
            - name: SERVER_REGIONS
              value: Europe
            - name: TZ
              value: America/Chicago
            - name: VPN_SERVICE_PROVIDER
              value: airvpn
            - name: VPN_TYPE
              value: wireguard
            - name: WIREGUARD_ADDRESSES
              value: 10.135.77.77/32,fd7d:76ee:e68f:a993:e9ff:2a54:abc:a39f/128
            - name: WIREGUARD_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  name: vpn-secret
                  key: wireguard
          image: qmcgaw/gluetun:latest
          name: gluetun
          ports:
            - containerPort: 8112
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
            - containerPort: 58846
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /config
              name: gluetun-claim0
        - env:
            - name: DELUGE_LOGLEVEL
              value: error
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/deluge:latest
          livenessProbe:
            exec:
              command:
                - ping -c 1 www.google.com || exit 1
            failureThreshold: 5
            periodSeconds: 60
            timeoutSeconds: 20
          name: deluge
          ports:
            - containerPort: 8112
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
            - containerPort: 58846
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: deluge-claim0
            - mountPath: /downloads
              name: deluge-claim1
      restartPolicy: Always
      volumes:
        - name: gluetun-claim0
          persistentVolumeClaim:
            claimName: gluetun-claim0      
        - name: deluge-claim0
          persistentVolumeClaim:
            claimName: deluge-claim0
        - name: deluge-claim1
          persistentVolumeClaim:
            claimName: deluge-claim1
