clusters/apps/arr/gluetun/gluetun-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: gluetun
  name: gluetun
spec:
  ports:
    - name: "8112"
      port: 8112
      targetPort: 8112
    - name: "6881"
      port: 6881
      targetPort: 6881
    - name: 6881-udp
      port: 6881
      protocol: UDP
      targetPort: 6881
    - name: "58846"
      port: 58846
      targetPort: 58846
  selector:
    io.kompose.service: gluetun
