clusters/apps/arr/gluetun/gluetun-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deluge-route
  namespace: arr-stack
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`deluge.local.wololoaeyoyo.com`)
      services:
        - name: gluetun 
          port: 8112
  tls:
    secretName: local-wololoaeyoyo-com-tls
